syntax = "proto3";
package tws.proto.htgjob;

import "job.proto";

option java_package = "edu.iu.dsc.tws.proto.system.job";
option java_outer_classname = "HTGJobAPI";

message SubGraph {
    double cpu = 1;
    int32 ram_mega_bytes = 2;
    double disk_giga_bytes = 3;
    int32 instances = 4;
    int32 workers_per_pod = 5;
    oneof indexRequired {
        int32 index = 6;
    }
    string name = 7;
    //TODO: Do we need this?
    tws.proto.job.Config config = 8;
}

message Relation {
    string parent = 1;
    string child = 2;
    string operation = 3;
}

message HTGJob {
    string htg_jobname = 1;
    repeated Relation relations = 2;
    repeated SubGraph graphs = 3;
    repeated ExecuteMessage execute_message = 4;
}

message ExecuteMessage {
    string subgraph_name = 1;
}
